---
source: hugr-llvm/src/extension/prelude.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define { i1, i1 } @_hl.main.1({ i1, i1 } %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %1 = extractvalue { i1, i1 } %0, 0
  %2 = extractvalue { i1, i1 } %0, 1
  %mrv = insertvalue { i1, i1 } undef, i1 %1, 0
  %mrv6 = insertvalue { i1, i1 } %mrv, i1 %2, 1
  ret { i1, i1 } %mrv6
}
